# machine_learning

./: CMakeLists.txt  README.md  curve_fitting_with_GD.c  exponential_fitting_batch_momentum.c  gradient_descent.c  linear_regression.c  linear_regression_batch_momentum.c  main.c  single_neuron.c
